# socketify-extra

./: .gitignore  .gitmodules  README.md  fiture_baru.txt  pyproject.toml  setup.py
.github/workflows/: linux.yml  linux_arm64.yml  macos.yml  macos_arm64.yml  main.yml  windows.yml
socketify_extra/: __init__.py  __main__.py  application.py  background.py  dataclasses.py  helpers.py  loop.py  request.py  response.py  tasks.py  uv.py  uwebsocket_cffi.py  uws.py  websocket.py
socketify_extra/commands/: create.py
socketify_extra/native/: Makefile
socketify_extra/native/src/: libsocketify.cpp  libsocketify.h
socketify_extra/templatetags/api_template/: main.py
socketify_extra/templatetags/api_template/settings/: cors.py  settings.py
socketify_extra/templatetags/mvc_template/: main.py-tpl
tests/: cors.py  gas.py  hello_word.py  test.py  test.txt  test_cors.py  uki.txt
